--- a/assets/article.css
+++ b/assets/article.css
@@ -36,6 +36,9 @@ a {
   color: darkslategray;
   text-decoration: underline;
 }
+ol, ul {
+  padding-inline-start: 1.2em;
+}
 ul {
   list-style-type: none;
 }
