--- a/assets/404.css
+++ b/assets/404.css
@@ -1,7 +1,7 @@
 body {
   background-color: beige;
   color: darkslategray;
-  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Noto Sans JP", "Yu Gothic Medium", YuGothic, Meiryo, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Noto Sans CJK JP", "Yu Gothic Medium", YuGothic, Meiryo, sans-serif;
   margin: 0;
   overflow-wrap: break-word;
   text-align: center;
