--- a/assets/article.css
+++ b/assets/article.css
@@ -38,7 +38,7 @@ a {
   text-decoration: underline;
 }
 ol, ul {
-  padding-inline-start: 1.2em;
+  padding-left: 1.2em;
 }
 ul {
   list-style-type: none;
@@ -46,7 +46,7 @@ ul {
 ul > li:before {
   content: "-";
   position: absolute;
-  margin-left: -1.1em; 
+  margin-left: -1.1em;
 }
 pre {
   line-height: 1.5em;
